# Fraud-Detection-System

./: .gitignore  README.md  pyproject.toml  streamlit_app.py
Notebook/: fraud_detection_model_.py  your_real_data.csv
Notebook/trained_models/: best_model.pkl
Python scripts/: app.py
database/: schema.sql
helpers/: risk_engine.py
helpers/db/: handler.py
tests/: test_basic.py
